--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
         <PackageReference Include="ObjectDumper.NET" Version="3.3.13" />
         <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     </ItemGroup>
