--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -14,4 +14,8 @@
         <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DONT_PUSH_TO_GITHUB\" />
+    </ItemGroup>
+
 </Project>
