Added some fonts

--- a/ProxChatClientGUI/ProxChatClientGUI.csproj
+++ b/ProxChatClientGUI/ProxChatClientGUI.csproj
@@ -20,6 +20,12 @@
   </ItemGroup>
 
   <ItemGroup>
+  	<Content Include="Fonts\**">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  	</Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
