--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -8,7 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="ObjectDumper.NET" Version="3.3.13" />
+        <PackageReference Include="ENet-CSharp" Version="2.4.8" />
+        <PackageReference Include="ObjectDumper.NET" Version="4.1.17" />
         <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     </ItemGroup>
 
